fix(SingleProjectLayout): standalone text overflowing in mobile

--- a/astro-frontend/src/styles/global.css
+++ b/astro-frontend/src/styles/global.css
@@ -149,6 +149,8 @@ h4 {
 p,
 li {
   text-wrap: pretty;
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
 
 ul,
